--- a/.config/nvim/userautoload/toml/plugins.toml
+++ b/.config/nvim/userautoload/toml/plugins.toml
@@ -43,6 +43,7 @@ repo = 'airblade/vim-gitgutter'
 # neoterm
 #----------
 [[plugins]]
+if = 'has("nvim")'
 repo = 'kassio/neoterm'
 hook_add = 'source ~/.config/nvim/userautoload/plugins/neoterm.vim'
 
