--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,33 +1,41 @@
-# tmuxを256色表示できるようにする
+# tmux起動時のシェルをzshにする
+# set-option -g default-shell /bin/zsh
+set-option -g default-shell /usr/local/bin/zsh
+
+# tmux use true color
 # set -g default-terminal "screen-256color"
 set-option -ga terminal-overrides ",xterm-256color:Tc"
 
-set-option -g status-left "  #[bg=colour021,fg=white] Host:#h #[bg=colour027,fg=white] Session:#S #[bg=colour033,fg=black] Window:#W(#P) #[bg=default,fg=default]"
-set-option -g status-right "#(tmux-network)#[bg=colour021,fg=white] %Y-%m-%d (%a) %H:%M:%S #[bg=default,fg=default]"
+# prefixキーをC-qに変更
+set -g prefix C-q
 
 # C-bのキーバインドを解除
 unbind C-b
-# prefixキーをC-qに変更
-set -g prefix C-q
-bind C-q send-prefix
 
 # ステータスバーをトップに配置する
 set-option -g status-position top
-# 左右のステータスバーの長さを決定する
-set-option -g status-left-length 90
+
+# 左右のステータスバーの長さを決定する 
+set-option -g status-left-length 90 
 set-option -g status-right-length 90
+
 # #P => ペイン番号
 # 最左に表示
 set-option -g status-left '#H:[#P]'
+
 # Wi-Fi、バッテリー残量、現在時刻
 # 最右に表示
 set-option -g status-right '#(wifi) #(battery --tmux) [%Y-%m-%d(%a) %H:%M]'
+
 # ステータスバーを1秒毎に描画し直す
 set-option -g status-interval 1
+
 # センタライズ（主にウィンドウ番号など）
 set-option -g status-justify centre
+
 # ステータスバーの色を設定する
 set-option -g status-bg "colour238"
+
 # status line の文字色を指定する。
 set-option -g status-fg "colour255"
 
@@ -57,5 +65,23 @@ set-option -g mouse on
 bind -n WheelUpPane if-shell -F -t = "#{mouse_any_flag}" "send-keys -M" "if -Ft= '#{pane_in_mode}' 'send-keys -M' 'copy-mode -e'"
 
 # コピーモードを設定する
-## viのキーバインドを使用
-# setw -g mode-keys vi
+# コピーモードでvimキーバインドを使う
+setw -g mode-keys vi
+
+# 'v' で選択を始める
+bind -T copy-mode-vi v send -X begin-selection
+
+# 'V' で行選択
+bind -T copy-mode-vi V send -X select-line
+
+# 'C-v' で矩形選択
+bind -T copy-mode-vi C-v send -X rectangle-toggle
+
+# 'y' でヤンク
+bind -T copy-mode-vi y send -X copy-selection
+
+# 'Y' で行ヤンク
+bind -T copy-mode-vi Y send -X copy-line
+
+# 'C-p'でペースト
+bind-key C-p paste-buffer
