--- a/.tmux.conf
+++ b/.tmux.conf
@@ -12,30 +12,35 @@ set -g prefix C-q
 # C-bのキーバインドを解除
 unbind C-b
 
+# reattach
+set-option -g default-command "reattach-to-user-namespace -l zsh"
+
+# 直前のウィンドウ
+bind C-q last-window
+# 設定リロード
+bind r source-file ~/.tmux.conf
+# ペイン終了
+bind x kill-pane
+# ウィンドウ終了
+bind X kill-window
+
 # ステータスバーをトップに配置する
 set-option -g status-position top
-
 # 左右のステータスバーの長さを決定する 
 set-option -g status-left-length 90 
 set-option -g status-right-length 90
-
 # #P => ペイン番号
 # 最左に表示
 set-option -g status-left '#H:[#P]'
-
 # Wi-Fi、バッテリー残量、現在時刻
 # 最右に表示
-set-option -g status-right '#(wifi) #(battery --tmux) [%Y-%m-%d(%a) %H:%M]'
-
+set-option -g status-right '[%Y-%m-%d(%a) %H:%M]'
 # ステータスバーを1秒毎に描画し直す
 set-option -g status-interval 1
-
 # センタライズ（主にウィンドウ番号など）
 set-option -g status-justify centre
-
 # ステータスバーの色を設定する
 set-option -g status-bg "colour238"
-
 # status line の文字色を指定する。
 set-option -g status-fg "colour255"
 
@@ -67,21 +72,15 @@ bind -n WheelUpPane if-shell -F -t = "#{mouse_any_flag}" "send-keys -M" "if -Ft=
 # コピーモードを設定する
 # コピーモードでvimキーバインドを使う
 setw -g mode-keys vi
-
 # 'v' で選択を始める
 bind -T copy-mode-vi v send -X begin-selection
-
 # 'V' で行選択
 bind -T copy-mode-vi V send -X select-line
-
 # 'C-v' で矩形選択
 bind -T copy-mode-vi C-v send -X rectangle-toggle
-
 # 'y' でヤンク
 bind -T copy-mode-vi y send -X copy-selection
-
 # 'Y' で行ヤンク
 bind -T copy-mode-vi Y send -X copy-line
-
 # 'C-p'でペースト
 bind-key C-p paste-buffer
