--- a/.tmux.conf
+++ b/.tmux.conf
@@ -49,7 +49,6 @@ bind h select-pane -L
 bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
-
 # vimのキーバインドでペインをリサイズする
 bind -r H resize-pane -L 5
 bind -r J resize-pane -D 5
@@ -57,10 +56,9 @@ bind -r K resize-pane -U 5
 bind -r L resize-pane -R 5
 
 # | でペインを縦分割する
-bind | split-window -h
-
+bind | split-window -h -c '#{pane_current_path}'
 # - でペインを縦分割する
-bind - split-window -v
+bind - split-window -v -c '#{pane_current_path}'
 
 # 番号基準値を変更
 set-option -g base-index 1
